clusters/talos-cluster/apps/vault-config-operator/release/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: vault-config-operator
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
